# nrf52-sensors

./: README.md  capacitive moisture sensor ReadME.docx
nRFPressureSensorCode/: CMakeLists.txt  prj.conf
nRFPressureSensorCode/boards/: nrf52840dk_nrf52840.overlay
nRFPressureSensorCode/boards/arm/nrf52840dk_nrf52840/: nrf52840dk_nrf52840.dts
nRFPressureSensorCode/build_4/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  zephyr_modules.txt  zephyr_settings.txt
nRFPressureSensorCode/build_4/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig
nRFPressureSensorCode/build_4/modules/TraceRecorder/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/azure-sdk-for-c/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/canopennode/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/chre/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/cirrus-logic/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/cjson/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/cmsis/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/connectedhomeip/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/fatfs/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/hal_nordic/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/hal_wurthelektronik/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/hostap/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/liblc3/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/libmetal/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/littlefs/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/loramac-node/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/lvgl/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/lz4/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/mbedtls/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/mcuboot/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/memfault-firmware-sdk/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/mipi-sys-t/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/nanopb/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/nrf/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/nrf_hw_models/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/nrfxlib/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/open-amp/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/openthread/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/picolibc/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/segger/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/st/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/tinycrypt/: cmake_install.cmake
nRFPressureSensorCode/build_4/modules/trusted-firmware-m/: cmake_install.cmake
nRFPressureSensorCode/build_4/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map  zephyr_pre1.elf  zephyr_pre1.map
nRFPressureSensorCode/build_4/zephyr/kconfig/: sources.txt
nRFPressureSensorCode/src/: Common.h  main.c
nRFPressureSensorCode/src/ADC/: AdcHandler.c  AdcHandler.h
nRFPressureSensorCode/src/BLE/: BleHandler.c  BleHandler.h  BleService.c  BleService.h
nRFPressureSensorCode/src/Json/: Jsonhandler.c
nRFPressureSensorCode/src/LCD/: LCDHandler.c  LCDHandler.h
nRFPressureSensorCode/src/MESH/: MeshHandler.c  mesh_handler.c  mesh_handler.h  mesh_sub_sys.c  mesh_sub_sys.h
nRFPressureSensorCode/src/NVS/: nvs_flash.c  nvs_flash.h
nRFPressureSensorCode/src/PMIC/: PMICHandler.c
nRFPressureSensorCode/src/RTC/: RtcHandler.c  RtcHandler.h
nRFPressureSensorCode/src/SYSTEM/: SystemHandler.c  SystemHandler.h
nRFPressureSensorCode/src/Timer/: TimerHandler.c  TimerHandler.h
nRF_FlowMeter/nRF_MSP430Code/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
nRF_FlowMeter/nRF_MSP430Code/boards/: nrf52840dk_nrf52840.overlay
nRF_FlowMeter/nRF_MSP430Code/src/: Common.h  main.c
nRF_GPSTrackerCode/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
nRF_GPSTrackerCode/boards/: nrf52840dk_nrf52840.overlay
nRF_GPSTrackerCode/src/: main.c
nRF_GPSTrackerCode/src/ACCLMTR/: Accelerometer.c  Accelerometer.h
nRF_GPSTrackerCode/src/BLE/: BleHandler.c  BleHandler.h  BleService.c  BleService.h
nRF_GPSTrackerCode/src/GPS/: GPSHandler.c  GPSHandler.h
nRF_GPSTrackerCode/src/Json/: JsonHandler.c  JsonHandler.h
nRF_GPSTrackerCode/src/LCD/: LCDHandler.c  LCDHandler.h
nRF_GPSTrackerCode/src/MESH/: MeshHandler.c  MeshHandler.h  MeshService.c
nRF_GPSTrackerCode/src/NVS/: nvs_flash.c  nvs_flash.h
nRF_GPSTrackerCode/src/PMIC/: PMICHandler.c  PMICHandler.h
nRF_GPSTrackerCode/src/RTC/: RtcHandler.c
nRF_GPSTrackerCode/src/SYSTEM/: SystemHandler.c  SystemHandler.h
nRF_GPSTrackerCode/src/Timer/: TimerHandler.c
nrfCapacitiveSensingWithSi5351/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
nrfCapacitiveSensingWithSi5351/src/: main.c
nrfCapacitiveSensingWithSi5351/src/ADC/: AdcHandler.c  AdcHandler.h
nrfCapacitiveSensingWithSi5351/src/FreqGenerator/: FreqGenerator.c  FreqGenerator.h
(+3827 files in other folders)
